- fixed memory bug in SCIP_DIGRAPH
- fixed bug while changing the objective value of an original value after transforming the problem
- fixed bug with sorting of propagators in presolving: the order can be changed by calling probing; thus, there is a copy of the
  propagators, which is sorted by presolving priority
- avoid numerically unstable (multi-)aggregations

misc:
- dropped support for Ipopt < 3.11
- updated CppAD to 20160000

makefile:
- All objective files are now placed in obj/static or obj/shared, depending on SHARED=false or SHARED=true, respectively.
- All internal and external libraries are placed in lib/static and lib/shared, the include files are in lib/include.
- External projects (including make.project) can use the makefile variable LINKCXXSCIPALL or LINKCCSCIPALL to link all SCIP libraries.
- Running "make help" lists all makefile options.
- All makefiles in examples/ and applications/ are updated.
- The binaries now contain an rpath to the SCIP directory, such that shared libraries are found.
- make.project contains the SCIP version as a define (SCIP_VERSION)


SCIP version 3.2.2
==================

features:
- for users of the ampl interface, the display/logfile option has been added to set the name of a
  file to write the SCIP log to (additionally to stdout)

fixed bugs:
- fixed bug in XML reader concerning comments
- fixed wrong representation of SOC constraints in NLP
- fixed possible segmentation fault in genvbounds propagator
- fixed bug with solutions from previous runs not satisfying an objective limit
- the AMPL interface now writes a solve status (solve_result_num) into the .sol file
- fix wrong propagation of product expressions
- fix memory leaks in TSP example
- return SCIP_ERROR when a memory exception is caught in SoPlex (was SCIP_LPERROR)
- in the cmpres.awk (allcmpres.sh) output, the counts in the time column are now with respect to the